# tdc

./: .gitignore  Makefile  README.md  meson.build
source/: compiler.d  compiler.d.in  main.d  unit.d
source/backend/: amd64.d  emitasm.d  package.d
source/dmd/: dinifile.d  globals.d
source/dmdres/: VERSION
source/frontend/: lexer.d  package.d  parser.d
source/language/: ast.d  token.d
source/utils/: files.d  messages.d
test/: basics.d  hello.d  mandelbrot.d
