project('TDC', 'd', version: '0.0.1 FarBelow', license: 'BSL-1.0')

add_global_arguments(
    ['-version=NoBackend', '-J=' + meson.source_root() + '/source/dmd/.'],
    language: 'd'
)

conf = configuration_data()
conf.set('NAME',    meson.project_name())
conf.set('VERSION', meson.project_version())
conf.set('LICENSE', meson.project_license()[0])

configure_file(
    input:  'source/compiler.d.in',
    output: 'compiler.d',
    configuration: conf
)

dmdSource = files(
    'source/dmd/root/aav.d',
    'source/dmd/root/array.d',
    'source/dmd/root/ctfloat.d',
    'source/dmd/root/file.d',
    'source/dmd/root/filename.d',
    'source/dmd/root/hash.d',
    'source/dmd/root/longdouble.d',
    'source/dmd/root/man.d',
    'source/dmd/root/outbuffer.d',
    'source/dmd/root/port.d',
    'source/dmd/root/response.d',
    'source/dmd/root/rmem.d',
    'source/dmd/root/rootobject.d',
    'source/dmd/root/speller.d',
    'source/dmd/root/string.d',
    'source/dmd/root/stringtable.d',
    'source/dmd/root/strtold.d',

    'source/dmd/access.d',
    'source/dmd/aggregate.d',
    'source/dmd/aliasthis.d',
    'source/dmd/apply.d',
    'source/dmd/argtypes_sysv_x64.d',
    'source/dmd/argtypes.d',
    'source/dmd/arrayop.d',
    'source/dmd/arraytypes.d',
    'source/dmd/ast_node.d',
    'source/dmd/astbase.d',
    'source/dmd/astcodegen.d',
    'source/dmd/asttypename.d',
    'source/dmd/attrib.d',
    'source/dmd/blockexit.d',
    'source/dmd/builtin.d',
    'source/dmd/canthrow.d',
    'source/dmd/cli.d',
    'source/dmd/clone.d',
    'source/dmd/compiler.d',
    'source/dmd/complex.d',
    'source/dmd/cond.d',
    'source/dmd/console.d',
    'source/dmd/constfold.d',
    'source/dmd/cppmangle.d',
    'source/dmd/cppmanglewin.d',
    'source/dmd/ctfeexpr.d',
    'source/dmd/ctorflow.d',
    'source/dmd/dcast.d',
    'source/dmd/dclass.d',
    'source/dmd/declaration.d',
    'source/dmd/delegatize.d',
    'source/dmd/denum.d',
    'source/dmd/dimport.d',
    'source/dmd/dinifile.d',
    'source/dmd/dinterpret.d',
    'source/dmd/dmacro.d',
    'source/dmd/dmangle.d',
    'source/dmd/dmodule.d',
    'source/dmd/doc.d',
    'source/dmd/dscope.d',
    'source/dmd/dstruct.d',
    'source/dmd/dsymbol.d',
    'source/dmd/dsymbolsem.d',
    'source/dmd/dtemplate.d',
    'source/dmd/dversion.d',
    'source/dmd/entity.d',
    'source/dmd/env.d',
    'source/dmd/errors.d',
    'source/dmd/escape.d',
    'source/dmd/expression.d',
    'source/dmd/expressionsem.d',
    'source/dmd/filecache.d',
    'source/dmd/func.d',
    'source/dmd/globals.d',
    'source/dmd/gluelayer.d',
    'source/dmd/hdrgen.d',
    'source/dmd/iasm.d',
    'source/dmd/iasmgcc.d',
    'source/dmd/id.d',
    'source/dmd/identifier.d',
    'source/dmd/impcnvtab.d',
    'source/dmd/imphint.d',
    'source/dmd/init.d',
    'source/dmd/initsem.d',
    'source/dmd/inline.d',
    'source/dmd/inlinecost.d',
    'source/dmd/intrange.d',
    'source/dmd/json.d',
    'source/dmd/lambdacomp.d',
    'source/dmd/lexer.d',
    'source/dmd/lib.d',
    'source/dmd/libelf.d',
    'source/dmd/libmach.d',
    'source/dmd/libmscoff.d',
    'source/dmd/libomf.d',
    'source/dmd/link.d',
    'source/dmd/mtype.d',
    'source/dmd/nogc.d',
    'source/dmd/nspace.d',
    'source/dmd/objc.d',
    'source/dmd/opover.d',
    'source/dmd/optimize.d',
    'source/dmd/parse.d',
    'source/dmd/parsetimevisitor.d',
    'source/dmd/permissivevisitor.d',
    'source/dmd/printast.d',
    'source/dmd/safe.d',
    'source/dmd/sapply.d',
    'source/dmd/scanelf.d',
    'source/dmd/scanmach.d',
    'source/dmd/scanmscoff.d',
    'source/dmd/scanomf.d',
    'source/dmd/semantic2.d',
    'source/dmd/semantic3.d',
    'source/dmd/sideeffect.d',
    'source/dmd/statement_rewrite_walker.d',
    'source/dmd/statement.d',
    'source/dmd/statementsem.d',
    'source/dmd/staticassert.d',
    'source/dmd/staticcond.d',
    'source/dmd/strictvisitor.d',
    'source/dmd/target.d',
    'source/dmd/templateparamsem.d',
    'source/dmd/tokens.d',
    'source/dmd/traits.d',
    'source/dmd/transitivevisitor.d',
    'source/dmd/typesem.d',
    'source/dmd/typinf.d',
    'source/dmd/utf.d',
    'source/dmd/utils.d',
    'source/dmd/visitor.d'
)

source = files(
    meson.current_build_dir() + '/compiler.d',

    'source/utils/messages.d',
    'source/main.d'
)

e = executable(
    meson.project_name().to_lower(),
    dmdSource, source,
    include_directories: include_directories('source'),
    install: true
)
